# VUT-PRL-2

./: CMakeLists.txt  Makefile  gol.cpp  life.cpp  test.sh
